@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,6 +27,7 @@ import com.sun.jdi.event.*;
 import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 import java.io.*;
+import java.util.concurrent.ThreadFactory;
 
 /**
  * Framework used by all JDI regression tests
@@ -465,7 +466,6 @@ abstract public class TestScaffold extends TargetAdapter {
         String mainWrapper = System.getProperty("main.wrapper");
         if ("Virtual".equals(mainWrapper)) {
             argInfo.targetAppCommandLine = TestScaffold.class.getName() + " " + mainWrapper + " ";
-            argInfo.targetVMArgs += "--enable-preview ";
         } else if ("true".equals(System.getProperty("test.enable.preview"))) {
             // the test specified @enablePreview.
             argInfo.targetVMArgs += "--enable-preview ";
@@ -709,6 +709,21 @@ abstract public class TestScaffold extends TargetAdapter {
             } catch (InterruptedException e) {
             }
         }
+
+        // Make sure debuggee exits with no errors. Otherwise failures might go unnoticed.
+        Process p = vm.process();
+        try {
+            p.waitFor();
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        int res = p.exitValue();
+        // Some tests purposefully exit with an exception, which produces exitValue
+        // 1, so we have to allow it also.
+        if (res != 0 && res != 1) {
+            throw new RuntimeException("Non-zero debuggee exitValue: " + res);
+        }
+
         traceln("TS: waitForVMDisconnect: done");
     }
 
@@ -964,6 +979,8 @@ abstract public class TestScaffold extends TargetAdapter {
         vmDisconnected = true;
     }
 
+    private static ThreadFactory threadFactory = r -> new Thread(r);
+
     public static void main(String[] args) throws Throwable {
         String wrapper = args[0];
         String className = args[1];
@@ -974,9 +991,10 @@ abstract public class TestScaffold extends TargetAdapter {
         mainMethod.setAccessible(true);
 
         if (wrapper.equals("Virtual")) {
+            threadFactory = Thread.ofVirtual().factory();
             MainThreadGroup tg = new MainThreadGroup();
             // TODO fix to set virtual scheduler group when become available
-            Thread vthread = startVirtualThread(() -> {
+            Thread vthread = Thread.ofVirtual().unstarted(() -> {
                 try {
                     mainMethod.invoke(null, new Object[] { classArgs });
                 } catch (InvocationTargetException e) {
@@ -987,6 +1005,7 @@ abstract public class TestScaffold extends TargetAdapter {
             });
             Thread.currentThread().setName(OLD_MAIN_THREAD_NAME);
             vthread.setName("main");
+            vthread.start();
             vthread.join();
         } else if (wrapper.equals("Kernel")) {
             MainThreadGroup tg = new MainThreadGroup();
@@ -1024,16 +1043,13 @@ abstract public class TestScaffold extends TargetAdapter {
         Throwable uncaughtThrowable = null;
     }
 
-    static Thread startVirtualThread(Runnable task) {
-        try {
-            Object builder = Thread.class.getMethod("ofVirtual").invoke(null);
-            Class<?> clazz = Class.forName("java.lang.Thread$Builder");
-            java.lang.reflect.Method start = clazz.getMethod("start", Runnable.class);
-            return (Thread) start.invoke(builder, task);
-        } catch (RuntimeException | Error e) {
-            throw e;
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
+    public static Thread newThread(Runnable task) {
+        return threadFactory.newThread(task);
+    }
+
+    public static Thread newThread(Runnable task, String name) {
+        Thread t = newThread(task);
+        t.setName(name);
+        return t;
     }
 }
